Fix Scheduler header cells alignment in the timelineWeek view if cellDuration is large (T657213) (#5139)

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -723,14 +723,17 @@
             .flex-container(row, nowrap);
         }
 
-        .dx-scheduler-header-panel-week-cell {
+        .dx-scheduler-header-panel-cell {
             flex-grow: 1;
-            flex-basis: 0;
             justify-content: center;
 
             .flex-container(row, nowrap);
         }
 
+        .dx-scheduler-header-panel-week-cell {
+            flex-basis: 0;
+        }
+        
         .dx-scheduler-header-row .dx-scheduler-header-panel-cell {
             border-right: none;  
         }
